src/test/rustdoc-ui/rustc-check-passes.rs
#![feature(box_syntax)]
#![feature(box_syntax)] //~ ERROR

pub fn foo() {}
